@@ -56,6 +56,12 @@
             "keyColor": "38;2;252;148;3"
         },
         {
+            "type": "command",
+            "key": "󰟪 Dotfiles",                       
+            "text": "cat ~/.dotfiles/VERSION",                           
+            "keyColor": "38;2;252;148;3"
+        },
+        {
             "type": "wmTheme",
             "key": " Window Manager Theme:",
             "keyColor": "38;2;252;148;3"
